fix showing style for light mode and then transitioning to dark mode when loading page on dark mode

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -18,7 +18,6 @@ body {
   color: var(--foreground);
   background: var(--background);
 
-  transition-duration: 0.5s;
   transition-property: var(--foreground), var(--background);
 }
 
